final jupyter notebook

--- a/trial.ipynb
+++ b/trial.ipynb
@@ -2,18 +2,322 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "29743cd2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello world\")"
+    "# Imports\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
+    "\n",
+    "# Suppress warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Jupyter-specific imports\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "# Set environment variable for protobuf\n",
+    "import os\n",
+    "os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"] = \"python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d232c353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF loaded successfully: harry-potter-trivia-questions-pdf.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "local_path = \"harry-potter-trivia-questions-pdf.pdf\"\n",
+    "if local_path:\n",
+    "    loader = PyPDFLoader(file_path=local_path)\n",
+    "    data = loader.load()\n",
+    "    print(f\"PDF loaded successfully: {local_path}\")\n",
+    "else:\n",
+    "    print(\"Upload a PDF file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7c4b1138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text split into 18 chunks\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split text into chunks\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "chunks = text_splitter.split_documents(data)\n",
+    "print(f\"Text split into {len(chunks)} chunks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8acdebb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector database created successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "# Pull the model\n",
+    "result1 = subprocess.run(['ollama', 'pull', 'all‑mpnet‑base‑v2'], \n",
+    "                       capture_output=True, text=True)\n",
+    "\n",
+    "result2 = subprocess.run(['ollama', 'pull', 'llama3.2:1b'], \n",
+    "                       capture_output=True, text=True)\n",
+    "\n",
+    "# Create vector database\n",
+    "vector_db = Chroma.from_documents(\n",
+    "    documents=chunks,\n",
+    "    embedding=OllamaEmbeddings(model=\"nomic-embed-text\"),\n",
+    "    collection_name=\"local-rag\"\n",
+    ")\n",
+    "print(\"Vector database created successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "abf9be89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up LLM and retrieval\n",
+    "local_model = \"llama3.2:1b\"  # or whichever model you prefer\n",
+    "llm = ChatOllama(model=local_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a96c4f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query prompt template\n",
+    "QUERY_PROMPT = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=\"\"\"You are an AI language model assistant. Your task is to generate 2\n",
+    "    different versions of the given user question to retrieve relevant documents from\n",
+    "    a vector database. By generating multiple perspectives on the user question, your\n",
+    "    goal is to help the user overcome some of the limitations of the distance-based\n",
+    "    similarity search. Provide these alternative questions separated by newlines.\n",
+    "    Original question: {question}\"\"\",\n",
+    ")\n",
+    "\n",
+    "# Set up retriever\n",
+    "retriever = MultiQueryRetriever.from_llm(\n",
+    "    vector_db.as_retriever(), \n",
+    "    llm,\n",
+    "    prompt=QUERY_PROMPT\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "43375447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAG prompt template\n",
+    "template = \"\"\"Answer the question based ONLY on the following context:\n",
+    "{context}\n",
+    "Question: {question}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "37010b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create chain\n",
+    "chain = (\n",
+    "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9c2e3069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat_with_pdf(question):\n",
+    "    \"\"\"\n",
+    "    Chat with the PDF using the RAG chain.\n",
+    "    \"\"\"\n",
+    "    return display(Markdown(chain.invoke(question)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "42fc994e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The main idea of this document appears to be related to Harry Potter trivia questions, likely from a PDF guide or worksheet. The content includes various trivia questions and answers about characters, events, and concepts from the Harry Potter series by J.K. Rowling."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "chat_with_pdf(\"What is the main idea of this document?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "81e991fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The answer to the question \"Who is Fluffy?\" is Hagrid's three-headed dog, which is described as being a very intimidating and powerful creature."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Example 2\n",
+    "chat_with_pdf(\"Who is Fluffy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2c584d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Based on the provided context, here are some trivia questions mentioned:\n",
+       "\n",
+       "1. Trivia question about Rita Skeeter's type of Animagus: A beetle\n",
+       "2. Trivia question about what is a bezoar: An antidote to poison\n",
+       "3. Trivia question about Dumbledore's hand turning blackened and shriveled: Marvolo Gaunt’s ring (A horcrux)\n",
+       "4. Trivia questions about the first names of Voldemort's parents: Tom and Merope\n",
+       "5. Trivia question about Severus Snape being a half-blood prince: Yes, with his son Edward Remus Lupin as the full name.\n",
+       "6. Trivia question about what Dumbledore tells Harry he sees in the Mirror of Erised: Thick wollen socks\n",
+       "7. Trivia questions about Hogwarts houses and professors:\n",
+       "   - Ravenclaw: Moaning Myrtle's house\n",
+       "   - Slytherin: Sirius Black, Draco Malfoy (though not explicitly mentioned as a professor)\n",
+       "   - Gryffindor: James Potter, Ron Weasley\n",
+       "   - Hufflepuff: Harry Potter, Rubeus Hagrid\n",
+       "8. Trivia questions about magical creatures and plants:\n",
+       "   - Devil's Snare (trap that traps Harry, Ron, and Hermione on their way to get the Philosopher's Stone)\n",
+       "   - Nargles (magical creature infested with them)\n",
+       "   - Aragog (Hagrid's pet giant spider)\n",
+       "   - Bellatrix Lestrange\n",
+       "9. Trivia questions about magical devices:\n",
+       "   - Portkey (an ordinary object enchanted to teleport people)\n",
+       "   - Pensieve (a magical device used to store and review memories)\n",
+       "10. Trivia questions about the characters' abilities and traits:\n",
+       "    - Metamorphmagus (Tonks' ability to transform her features)\n",
+       "    - Veritaserum (the truth-telling potion that makes people tell the truth)\n",
+       "    - Expelliarmus (a spell to disarm an opponent)\n",
+       "    - Neville's toad's name is Trevor\n",
+       "11. Trivia questions about the Death Eaters:\n",
+       "    - A terrorist group of wizards and witches\n",
+       "12. Trivia questions about Hogwarts and its history:\n",
+       "    - The golden snitch\n",
+       "    - Yule ball\n",
+       "    - Death eaters\n",
+       "13. Trivia questions about Harry Potter's backstory:\n",
+       "    - Tom Riddle (young Lord Voldemort)\n",
+       "    - Horace Slughorn (founder of the Slug Club)\n",
+       "14. Trivia questions about the Hogwarts founders and their first names:\n",
+       "    - Godric Gryffindor, Salazar Slytherin, Helga Hufflepuff, Rowena Ravenclaw\n",
+       "15. Trivia question about when Harry Potter's birthday is: July 31"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "chat_with_pdf(\"What are some trivia questions mentioned in the document?\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
