--- a/trial.ipynb
+++ b/trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "29743cd2",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "d232c353",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "7c4b1138",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "8acdebb4",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "abf9be89",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "a96c4f7b",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "43375447",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "37010b85",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "9c2e3069",
    "metadata": {},
    "outputs": [],
@@ -194,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "42fc994e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "The main idea of this document appears to be related to Harry Potter trivia questions, likely from a PDF guide or worksheet. The content includes various trivia questions and answers about characters, events, and concepts from the Harry Potter series by J.K. Rowling."
+       "The main idea of this document appears to be a collection or quiz about the Harry Potter series by J.K. Rowling, specifically covering various trivia questions and topics from the books. The content ranges from character names and spells (e.g., Rita Skeeter being an Animagus beetle) to events like Dumbledore's hand turning blackened and Voldemort's Horcrux creation."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -218,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "81e991fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "The answer to the question \"Who is Fluffy?\" is Hagrid's three-headed dog, which is described as being a very intimidating and powerful creature."
+       "The answer to the question \"Who is Fluffy\" is Hagrid's three-headed dog."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -242,51 +242,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
+   "id": "f8f36e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Based on the provided context, it appears that Severus Snape is mentioned multiple times as the half-blood prince."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "chat_with_pdf(\"Who is Snape?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "2c584d64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Based on the provided context, here are some trivia questions mentioned:\n",
+       "Here are the trivia questions mentioned in the document:\n",
        "\n",
-       "1. Trivia question about Rita Skeeter's type of Animagus: A beetle\n",
-       "2. Trivia question about what is a bezoar: An antidote to poison\n",
-       "3. Trivia question about Dumbledore's hand turning blackened and shriveled: Marvolo Gaunt’s ring (A horcrux)\n",
-       "4. Trivia questions about the first names of Voldemort's parents: Tom and Merope\n",
-       "5. Trivia question about Severus Snape being a half-blood prince: Yes, with his son Edward Remus Lupin as the full name.\n",
-       "6. Trivia question about what Dumbledore tells Harry he sees in the Mirror of Erised: Thick wollen socks\n",
-       "7. Trivia questions about Hogwarts houses and professors:\n",
-       "   - Ravenclaw: Moaning Myrtle's house\n",
-       "   - Slytherin: Sirius Black, Draco Malfoy (though not explicitly mentioned as a professor)\n",
-       "   - Gryffindor: James Potter, Ron Weasley\n",
-       "   - Hufflepuff: Harry Potter, Rubeus Hagrid\n",
-       "8. Trivia questions about magical creatures and plants:\n",
-       "   - Devil's Snare (trap that traps Harry, Ron, and Hermione on their way to get the Philosopher's Stone)\n",
-       "   - Nargles (magical creature infested with them)\n",
-       "   - Aragog (Hagrid's pet giant spider)\n",
-       "   - Bellatrix Lestrange\n",
-       "9. Trivia questions about magical devices:\n",
-       "   - Portkey (an ordinary object enchanted to teleport people)\n",
-       "   - Pensieve (a magical device used to store and review memories)\n",
-       "10. Trivia questions about the characters' abilities and traits:\n",
-       "    - Metamorphmagus (Tonks' ability to transform her features)\n",
-       "    - Veritaserum (the truth-telling potion that makes people tell the truth)\n",
-       "    - Expelliarmus (a spell to disarm an opponent)\n",
-       "    - Neville's toad's name is Trevor\n",
-       "11. Trivia questions about the Death Eaters:\n",
-       "    - A terrorist group of wizards and witches\n",
-       "12. Trivia questions about Hogwarts and its history:\n",
-       "    - The golden snitch\n",
-       "    - Yule ball\n",
-       "    - Death eaters\n",
-       "13. Trivia questions about Harry Potter's backstory:\n",
-       "    - Tom Riddle (young Lord Voldemort)\n",
-       "    - Horace Slughorn (founder of the Slug Club)\n",
-       "14. Trivia questions about the Hogwarts founders and their first names:\n",
-       "    - Godric Gryffindor, Salazar Slytherin, Helga Hufflepuff, Rowena Ravenclaw\n",
-       "15. Trivia question about when Harry Potter's birthday is: July 31"
+       "1. Trivia Question: Rita Skeeter is an Animagus who transforms into a beetle.\n",
+       "2. Trivia Question: Dumbledore leaves Ron Weasley's name in his will as Deluminator.\n",
+       "3. Trivia Question: Ginny names the Pygmy Puff that she buys from Weasleys' Wizard Wheezes Arnold.\n",
+       "4. Trivia Question: Fred and George Weasley were born on April 1st.\n",
+       "5. Trivia Question: Harry manages to breathe underwater during the second task of the Triwizard Tournament by eating gillyweed.\n",
+       "6. Trivia Question: Tonks has the ability to transform her features due to being a Metamorphmagus.\n",
+       "7. Trivia Question: Dumbledore tells Harry that he sees \"thick wollen socks\" in the Mirror of Erised.\n",
+       "8. Trivia Question: The Philosopher's Stone is often infested with Nargles, magical creatures.\n",
+       "9. Trivia Question: James Potter transfigures into a stag.\n",
+       "10. Trivia Question: Hermione names her son Edward Remus Lupin after Professor Lupin.\n",
+       "11. Trivia Question: Dumbledore leaves a Vial of Felix Felicis in Ron Weasley's will.\n",
+       "12. Trivia Question: Ginny names the treehouse where Harry, Ron, and Hermione live under a spell to protect it from being destroyed by the Ministry of Magic.\n",
+       "13. Trivia Question: The Hogwarts house that Moaning Myrtle belongs to is Ravenclaw.\n",
+       "14. Trivia Question: James Potter transforms into a stag during his first year at Hogwarts.\n",
+       "15. Trivia Question: The Philosopher's Stone contains a bezoar, a magical plant trap.\n",
+       "16. Trivia Question: Professor McGonagall teaches Transfiguration at Hogwarts.\n",
+       "17. Trivia Question: Ginny names the Pygmy Puff that she bought from Weasleys' Wizard Wheezes after it is petrified by Mrs. Norris.\n",
+       "18. Trivia Question: Fleur Delacour was one of the four competitors in Goblet of Fire's Triwizard Tournament.\n",
+       "19. Trivia Question: When Harry Potter's birthday is, July 31st\n",
+       "20. Trivia Question: The Hogwarts school motto in English is Never tickle a sleeping dragon"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
